# jitML

./: .dockerignore  .gitignore  .hlint.yaml  AGENTS.md  CLAUDE.md  HASKELL_CLI_TOOL.md  LICENSE  README.md  cabal.project  compose.yaml  jitml.cabal
DEVELOPMENT_PLAN/: 00-overview.md  README.md  development_plan_standards.md  legacy-tracking-for-deletion.md  legacy-tracking-for-development.md  phase-0-planning-documentation.md  phase-1-haskell-cli-surface.md  phase-10-checkpointing-and-inference.md  phase-11-purescript-frontend-and-demo.md  phase-12-test-stanzas-and-cross-cluster.md  phase-13-linux-cuda-and-cluster-closure.md  phase-13-no-caveat-model-runtime.md  phase-14-apple-silicon-closure.md  phase-14-interactive-demo-and-playwright-closure.md  phase-15-cross-substrate-and-handoff.md  phase-15-linux-cuda-and-cluster-closure.md  phase-16-apple-silicon-closure.md  phase-16-no-caveat-model-runtime.md  phase-17-cross-substrate-and-handoff.md  phase-17-interactive-demo-and-playwright-closure.md  phase-18-no-caveat-product-handoff.md  phase-19-product-truth-gates.md  phase-2-bootstrap-reconciler-and-jit-cache.md  phase-20-de-fossilization-and-scaffold-lint.md  phase-21-type-state-dsl-and-inference-eligibility.md  phase-22-canonical-matrix-and-dataset-integrity.md  phase-23-general-differentiable-layer-engine.md  phase-24-real-supervised-architectures.md  phase-25-real-rl-algorithms-and-environments.md  phase-26-alphazero-real-self-play.md  phase-27-demo-all-model-rendering.md  phase-28-per-model-integration-and-e2e.md  phase-29-linux-cuda-product-lane.md  phase-3-cluster-substrate-and-routing.md  phase-30-apple-silicon-product-lane.md  phase-31-no-caveat-product-aggregation.md  phase-4-stateful-platform-services.md  phase-5-jitml-service-daemon.md  phase-6-numerical-core.md  phase-7-jit-codegen-and-substrates.md  (+3 more)
DEVELOPMENT_PLAN/attestations/: apple-silicon-report-card.md  linux-cpu-report-card.md  linux-cuda-report-card.md
app/: Demo.hs  Main.hs
bootstrap/: _lib.sh  apple-silicon.sh  linux-cpu.sh  linux-cuda.sh
chart/: Chart.yaml  values.yaml
chart/local/jitml-demo/: Chart.yaml  values.yaml
chart/local/jitml-service/: Chart.yaml  values.yaml
chart/local/tensorboard/: Chart.yaml  values.yaml
chart/templates/: configmap-jitml-service.yaml  deployment-jitml-demo.yaml  deployment-jitml-service.yaml  envoyproxy-jitml-edge.yaml  gateway-jitml-edge.yaml  gatewayclass-jitml.yaml  grafana-dashboard-alphazero-arena.yaml  grafana-dashboard-jit-cache.yaml  grafana-dashboard-minio-put-latency.yaml  grafana-dashboard-pulsar-consumer-lag.yaml  grafana-dashboard-rl-episode-reward.yaml  grafana-dashboard-training-throughput.yaml  httproute-demo-api.yaml  httproute-demo-root.yaml  httproute-demo-ws.yaml  httproute-grafana.yaml  httproute-harbor-api.yaml  httproute-harbor-portal.yaml  httproute-harbor-registry.yaml  httproute-jitml-service-healthz.yaml  httproute-jitml-service-metrics.yaml  httproute-jitml-service-readyz.yaml  httproute-minio-console.yaml  httproute-minio-s3.yaml  httproute-prometheus.yaml  httproute-pulsar-admin.yaml  httproute-pulsar-ws.yaml  httproute-tensorboard.yaml  minio-values.yaml  prometheus-scrapeconfig-jitml.yaml  pv-platform-harbor-pg-0.yaml  pv-platform-harbor-pg-1.yaml  pv-platform-harbor-pg-2.yaml  pv-platform-harbor-pg-repo1-0.yaml  pv-platform-minio-0.yaml  pv-platform-minio-1.yaml  pv-platform-minio-2.yaml  pv-platform-minio-3.yaml  pv-platform-pulsar-bookie-journal-0.yaml  pv-platform-pulsar-bookie-journal-1.yaml  (+15 more)
chart/values/: harbor.yaml  kube-prometheus-stack.yaml  minio.yaml  pulsar.yaml
codegen-cuda/: README.md  build.sh  kernel.cu
codegen-metal/: README.md  build.sh
codegen-onednn/: README.md  build.sh  kernel.cc
dhall/cluster/: Schema.dhall  resources.dhall
dhall/numerics/: Activation.dhall  Layer.dhall  Loss.dhall  Optimizer.dhall  Scheduler.dhall  Schema.dhall  SpectralOp.dhall
dhall/project/: Schema.dhall
dhall/rl/: Algorithm.dhall  Schema.dhall
dhall/run/: Schema.dhall
dhall/service/: BootConfig.dhall  LiveConfig.dhall
docker/: Dockerfile  compose.yaml
documents/: documentation_standards.md
documents/cli/: commands.md
documents/engineering/: README.md  apple_silicon_metal_headless_builds.md  checkpoint_format.md  cli_command_surface.md  cluster_topology.md  code_quality.md  daemon_architecture.md  determinism_contract.md  durable_state_dsl.md  haskell_code_guide.md  jit_codegen_architecture.md  numerical_core.md  product_completion_contract.md  pulsar_ml_workflow.md  purescript_frontend.md  training_metrics_and_splits.md  training_workloads.md  unit_testing_policy.md
experiments/: cartpole.dhall  key-door-grid.dhall  mnist-tune.dhall  mnist.dhall
infra/pulumi/: Pulumi.yaml  index.ts  package.json
kind/: cluster-apple-silicon.yaml  cluster-linux-cpu.yaml  cluster-linux-cuda.yaml
kind/nvidia-container-runtime/: config.toml
playwright/: jitml-demo.spec.ts  package.json  playwright.config.ts
proto/chart/templates/: grafana-dashboard-pulsar-consumer-lag.yaml  httproute-harbor-service.yaml  httproute-minio-console.yaml  httproute-minio-s3.yaml  httproute-prometheus.yaml  httproute-tensorboard.yaml
proto/documents/cli/: commands.md
proto/jitml/: gc.proto  inference.proto  rl.proto  training.proto  tune.proto
proto/tensorboard/: event.proto
share/completion/bash/: jitml
share/completion/fish/: jitml.fish
share/completion/zsh/: _jitml
share/man/man1/: jitml.1
src/JitML/: App.hs  Bootstrap.hs  Routes.hs  Substrate.hs
src/JitML/AppError/: AppError.hs  Render.hs
src/JitML/CLI/: Help.hs  Json.hs  Output.hs  Parser.hs  (+2 more)
test/backends/: Main.hs
test/cross-backend/: Main.hs
test/daemon-lifecycle/: Main.hs
test/e2e/: Main.hs
test/haskell-style/: Main.hs
test/hyperparameter/: Main.hs
test/integration/: Main.hs
test/purescript-style/: Main.hs
test/rl-canonicals/: Main.hs
test/sentinel/: Main.hs
test/sl-canonicals/: Main.hs
test/unit/: DurableStateTopology.hs  Main.hs
web/: package.json  spago.yaml
web/src/: Main.js  Main.purs  PanelRegistry.purs
web/test/: Main.purs
(+286 files in other folders)
