cabal-version: 3.16
name:          jitml
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    maintainers@example.invalid
author:        jitML contributors
tested-with:   ghc ==9.14.1
synopsis:
    Deterministic, reproducible, JIT-compiled machine learning for Haskell

description:
    jitML is a Haskell-native machine learning framework with a doctrine-shaped CLI.

build-type:    Simple

library
    exposed-modules:
        JitML.App
        JitML.AppError.AppError
        JitML.AppError.Render
        JitML.Cache.Key
        JitML.Cache.Layout
        JitML.Cache.Manifest
        JitML.Cache.Symlink
        JitML.Bootstrap
        JitML.CLI.Help
        JitML.CLI.Json
        JitML.CLI.Output
        JitML.CLI.Parser
        JitML.CLI.Spec
        JitML.CLI.Tree
        JitML.Codegen.Cuda
        JitML.Codegen.KernelFamily
        JitML.Codegen.Metal
        JitML.Codegen.OneDnn
        JitML.Codegen.RuntimeSource
        JitML.Codegen.SourceFile
        JitML.Checkpoint.Format
        JitML.Checkpoint.Store
        JitML.Cluster.DockerImage
        JitML.Cluster.EdgePort
        JitML.Cluster.Gateway
        JitML.Cluster.Helm
        JitML.Cluster.Kind
        JitML.Cluster.PostgresRegistry
        JitML.Cluster.Publication
        JitML.Cluster.PulsarBootstrap
        JitML.Cluster.Readiness
        JitML.Cluster.Storage
        JitML.Docs.Check
        JitML.Docs.Generate
        JitML.Docs.Render
        JitML.Engines.CpuFeatures
        JitML.Engines.Engine
        JitML.Engines.Local
        JitML.Engines.Tuning
        JitML.Env.Build
        JitML.Env.Env
        JitML.Generated.Paths
        JitML.Generated.Registry
        JitML.Lint.Chart
        JitML.Lint.DhallNumerics
        JitML.Lint.DhallRL
        JitML.Lint.ForbiddenPaths
        JitML.Lint.Stack
        JitML.Lint.Stack.Types
        JitML.Numerics.Catalog
        JitML.Numerics.Schema
        JitML.Observability.Grafana
        JitML.Observability.Prometheus
        JitML.Observability.TbSidecar
        JitML.Observability.TensorBoard
        JitML.Plan.Apply
        JitML.Plan.Plan
        JitML.Plan.Render
        JitML.Proto.Rl
        JitML.Proto.TensorBoard
        JitML.Proto.Training
        JitML.Proto.Tune
        JitML.Prerequisite.Nodes.Cluster
        JitML.Prerequisite.Nodes.Common
        JitML.Prerequisite.Nodes.Container
        JitML.Prerequisite.Nodes.Toolchain
        JitML.Prerequisite.Plan
        JitML.Prerequisite.Reconcile
        JitML.Prerequisite.Registry
        JitML.Prerequisite.Types
        JitML.RL.Algorithms
        JitML.RL.Algorithms.A2c
        JitML.RL.Algorithms.Ars
        JitML.RL.Algorithms.Common
        JitML.RL.Algorithms.CrossQ
        JitML.RL.Algorithms.Ddpg
        JitML.RL.Algorithms.Dqn
        JitML.RL.Algorithms.Her
        JitML.RL.Algorithms.MaskablePpo
        JitML.RL.Algorithms.Ppo
        JitML.RL.Algorithms.QrDqn
        JitML.RL.Algorithms.RecurrentPpo
        JitML.RL.Algorithms.Registry
        JitML.RL.Algorithms.Sac
        JitML.RL.Algorithms.Td3
        JitML.RL.Algorithms.Tqc
        JitML.RL.Algorithms.Trpo
        JitML.RL.AlphaZero
        JitML.RL.AlphaZero.Arena
        JitML.RL.AlphaZero.Mcts
        JitML.RL.AlphaZero.SelfPlay
        JitML.RL.AsyncBuffer
        JitML.RL.Buffer
        JitML.RL.Environments
        JitML.RL.Framework
        JitML.RL.Loop
        JitML.RL.Policy
        JitML.RL.Schema
        JitML.RL.VecEnv
        JitML.Routes
        JitML.Service.BootConfig
        JitML.Service.Capabilities
        JitML.Service.ConfigMap
        JitML.Service.Consumer
        JitML.Service.Endpoints
        JitML.Service.HarborSubprocess
        JitML.Service.FilesystemMinIO
        JitML.Service.Http
        JitML.Service.HotReload
        JitML.Service.KubectlSubprocess
        JitML.Service.Lifecycle
        JitML.Service.LiveConfig
        JitML.Service.Logger
        JitML.Service.MinIOSubprocess
        JitML.Service.PulsarWebSocketSubprocess
        JitML.Service.Retry
        JitML.Service.Runtime
        JitML.Service.Signal
        JitML.SL.Canonicals
        JitML.SL.Dataset
        JitML.SL.Loop
        JitML.SL.Train
        JitML.Storage.Buckets
        JitML.Sub.Render
        JitML.Sub.Stream
        JitML.Sub.Subprocess
        JitML.Substrate
        JitML.Tart.Exec
        JitML.Tart.Lifecycle
        JitML.Test.LivePlan
        JitML.Test.Report
        JitML.Tune.Catalog
        JitML.Tune.Resume
        JitML.Web.Bundle
        JitML.Web.Contracts
        JitML.Web.Server

    hs-source-dirs:   src
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        text,
        async,
        bytestring,
        aeson,
        cryptohash-sha256,
        dhall,
        directory,
        filepath,
        mtl,
        network,
        optparse-applicative,
        prettyprinter,
        prettyprinter-ansi-terminal,
        ansi-terminal,
        path,
        path-io,
        serialise,
        stm,
        typed-process,
        safe-exceptions,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        tasty-golden,
        temporary,
        unix

executable jitml
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        jitml

executable jitml-demo
    main-is:          Demo.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        jitml

test-suite jitml-unit
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/unit
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        aeson,
        bytestring,
        directory,
        filepath,
        jitml,
        optparse-applicative,
        path,
        path-io,
        tasty,
        tasty-hunit,
        temporary,
        text,
        unix

test-suite jitml-integration
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/integration
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        bytestring,
        directory,
        filepath,
        jitml,
        safe-exceptions,
        tasty,
        tasty-hunit,
        temporary,
        text

test-suite jitml-sl-canonicals
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sl-canonicals
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        jitml,
        tasty,
        tasty-hunit,
        text

test-suite jitml-rl-canonicals
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/rl-canonicals
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        jitml,
        text,
        tasty,
        tasty-hunit

test-suite jitml-hyperparameter
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/hyperparameter
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        jitml,
        tasty,
        tasty-hunit,
        text

test-suite jitml-cross-backend
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/cross-backend
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        jitml,
        tasty,
        tasty-hunit

test-suite jitml-daemon-lifecycle
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/daemon-lifecycle
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        bytestring,
        jitml,
        mtl,
        network,
        tasty,
        tasty-hunit,
        text

test-suite jitml-e2e
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/e2e
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        bytestring,
        jitml,
        network,
        tasty,
        tasty-hunit,
        text

test-suite jitml-haskell-style
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/haskell-style
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        jitml,
        tasty,
        tasty-hunit,
        text

test-suite jitml-purescript-style
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/purescript-style
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.22 && <4.23,
        directory,
        jitml,
        tasty,
        tasty-hunit,
        text
