cabal-version: 3.16
name:          jitml
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    maintainers@example.invalid
author:        jitML contributors
tested-with:   ghc ==9.12.4
synopsis:
    Deterministic, reproducible, JIT-compiled machine learning for Haskell

description:
    jitML is a Haskell-native machine learning framework with a doctrine-shaped CLI.

build-type:    Simple

flag cuda
    description:
        Compile against the host CUDA toolkit so the typed cuBLAS/cuDNN
        bindings under `JitML.Engines.CublasBindings` /
        `JitML.Engines.CudnnBindings` link against `libcublas` and
        `libcudnn`. Used by `jitml:local` and any Linux CUDA validation
        host. Off by default so the warning-clean baseline build still
        succeeds on hosts without `nvcc`, `libcublas-dev`, or
        `libcudnn-dev` installed.

    default:     False
    manual:      True

library
    exposed-modules:
        JitML.App
        JitML.AppError.AppError
        JitML.AppError.Render
        JitML.Cache.Key
        JitML.Cache.Layout
        JitML.Cache.Manifest
        JitML.Cache.Symlink
        JitML.Bootstrap
        JitML.CLI.Help
        JitML.CLI.Json
        JitML.CLI.Output
        JitML.CLI.Parser
        JitML.CLI.Spec
        JitML.CLI.Tree
        JitML.Codegen.Cuda
        JitML.Codegen.KernelFamily
        JitML.Codegen.Metal
        JitML.Codegen.MlpCuda
        JitML.Codegen.OneDnn
        JitML.Codegen.RuntimeSource
        JitML.Codegen.SourceFile
        JitML.Checkpoint.Format
        JitML.Checkpoint.Store
        JitML.Cluster.DockerImage
        JitML.Cluster.EdgePort
        JitML.Cluster.Gateway
        JitML.Cluster.Helm
        JitML.Cluster.Kind
        JitML.Cluster.PostgresRegistry
        JitML.Cluster.Publication
        JitML.Cluster.PulsarBootstrap
        JitML.Cluster.Readiness
        JitML.Cluster.Resources
        JitML.Cluster.Storage
        JitML.CrossBackend.Parity
        JitML.Docs.Check
        JitML.Docs.Generate
        JitML.Docs.Render
        JitML.Engines.CpuFeatures
        JitML.Engines.CublasBindings
        JitML.Engines.CudaLocal
        JitML.Engines.CudaRuntime
        JitML.Engines.CudnnBindings
        JitML.Engines.Engine
        JitML.Engines.HasEngine
        JitML.Engines.Loader
        JitML.Engines.Local
        JitML.Engines.MetalLocal
        JitML.Engines.MetalRuntime
        JitML.Engines.OneDnnRuntime
        JitML.Engines.Rng
        JitML.Engines.Tolerance
        JitML.Engines.Tuning
        JitML.Engines.TuningBenchmark
        JitML.Engines.TuningCache
        JitML.Engines.TuningStore
        JitML.Env.Build
        JitML.Env.Env
        JitML.Experiment.Overrides
        JitML.Generated.Paths
        JitML.Generated.Registry
        JitML.Lint.Chart
        JitML.Lint.DhallNumerics
        JitML.Lint.DhallRL
        JitML.Lint.ForbiddenPaths
        JitML.Lint.Stack
        JitML.Lint.Stack.Types
        JitML.Numerics.Catalog
        JitML.Numerics.Mlp
        JitML.Numerics.MlpCuda
        JitML.Numerics.Schema
        JitML.Observability.Grafana
        JitML.Observability.Prometheus
        JitML.Observability.TbSidecar
        JitML.Observability.TensorBoard
        JitML.Plan.Apply
        JitML.Plan.Plan
        JitML.Plan.Render
        JitML.Proto.Gc
        JitML.Proto.Inference
        JitML.Proto.Rl
        JitML.Proto.TensorBoard
        JitML.Proto.Training
        JitML.Proto.Tune
        JitML.Proto.Wire
        JitML.Prerequisite.Nodes.Cluster
        JitML.Prerequisite.Nodes.Common
        JitML.Prerequisite.Nodes.Container
        JitML.Prerequisite.Nodes.Toolchain
        JitML.Prerequisite.Plan
        JitML.Prerequisite.Reconcile
        JitML.Prerequisite.Registry
        JitML.Prerequisite.Types
        JitML.RL.Algorithms
        JitML.RL.Algorithms.A2c
        JitML.RL.Algorithms.A2cLoss
        JitML.RL.Algorithms.Ars
        JitML.RL.Algorithms.ArsLoss
        JitML.RL.Algorithms.ArsTrainer
        JitML.RL.Algorithms.Common
        JitML.RL.Algorithms.ContinuousTrainer
        JitML.RL.Algorithms.CrossQ
        JitML.RL.Algorithms.CrossQLoss
        JitML.RL.Algorithms.Ddpg
        JitML.RL.Algorithms.DdpgLoss
        JitML.RL.Algorithms.Dqn
        JitML.RL.Algorithms.DqnLoss
        JitML.RL.Algorithms.DqnTrainer
        JitML.RL.Algorithms.Her
        JitML.RL.Algorithms.HerLoss
        JitML.RL.Algorithms.HerTrainer
        JitML.RL.Algorithms.MaskablePpo
        JitML.RL.Algorithms.MaskablePpoLoss
        JitML.RL.Algorithms.Ppo
        JitML.RL.Algorithms.PpoLoss
        JitML.RL.Algorithms.PpoTrainer
        JitML.RL.Algorithms.QrDqn
        JitML.RL.Algorithms.QrDqnLoss
        JitML.RL.Algorithms.QrDqnTrainer
        JitML.RL.Algorithms.RecurrentPpo
        JitML.RL.Algorithms.RecurrentPpoLoss
        JitML.RL.Algorithms.Registry
        JitML.RL.Algorithms.Sac
        JitML.RL.Algorithms.SacLoss
        JitML.RL.Algorithms.Td3
        JitML.RL.Algorithms.Td3Loss
        JitML.RL.Algorithms.Tqc
        JitML.RL.Algorithms.TqcLoss
        JitML.RL.Algorithms.Trpo
        JitML.RL.Algorithms.TrpoLoss
        JitML.RL.ALE
        JitML.RL.AlphaZero
        JitML.RL.AlphaZero.Arena
        JitML.RL.AlphaZero.EnginePrior
        JitML.RL.AlphaZero.PolicyValueNet
        JitML.RL.AlphaZero.Mcts
        JitML.RL.AlphaZero.SelfPlay
        JitML.RL.AsyncBuffer
        JitML.RL.Buffer
        JitML.RL.ConvergenceThresholds
        JitML.RL.Environments
        JitML.RL.Framework
        JitML.RL.Loop
        JitML.RL.Policy
        JitML.RL.Schema
        JitML.RL.Simulator
        JitML.RL.SimulatorLoop
        JitML.RL.VecEnv
        JitML.Routes
        JitML.Service.BootConfig
        JitML.Service.AppleInferenceRpc
        JitML.Service.Capabilities
        JitML.Service.Clients
        JitML.Service.ConfigMap
        JitML.Service.Consumer
        JitML.Service.Endpoints
        JitML.Service.HarborSubprocess
        JitML.Service.FilesystemMinIO
        JitML.Service.Http
        JitML.Service.HotReload
        JitML.Service.KubectlSubprocess
        JitML.Service.Lifecycle
        JitML.Service.LiveConfig
        JitML.Service.Logger
        JitML.Service.MinIOSubprocess
        JitML.Service.PulsarWebSocketSubprocess
        JitML.Service.Retry
        JitML.Service.RunConfig
        JitML.Service.Runtime
        JitML.Service.Signal
        JitML.Service.WebSocket
        JitML.Service.Workload
        JitML.SL.Canonicals
        JitML.SL.Classifier
        JitML.SL.ConvergenceThresholds
        JitML.SL.Dataset
        JitML.SL.Loop
        JitML.SL.Train
        JitML.Storage.Buckets
        JitML.Sub.Render
        JitML.Sub.Stream
        JitML.Sub.Subprocess
        JitML.Substrate
        JitML.Test.LivePlan
        JitML.Test.Report
        JitML.Tune.Catalog
        JitML.Tune.Resume
        JitML.Web.Bundle
        JitML.Web.Contracts
        JitML.Web.Server
        Proto.Jitml.Inference
        Proto.Jitml.Inference_Fields
        Proto.Jitml.Rl
        Proto.Jitml.Rl_Fields
        Proto.Jitml.Training
        Proto.Jitml.Training_Fields
        Proto.Jitml.Tune
        Proto.Jitml.Tune_Fields

    hs-source-dirs:   src gen
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        text,
        async,
        bytestring,
        aeson,
        base64-bytestring,
        containers,
        cryptohash-sha1,
        cryptohash-sha256,
        proto-lens,
        proto-lens-runtime,
        dhall,
        directory,
        filepath,
        mtl,
        network,
        optparse-applicative,
        prettyprinter,
        prettyprinter-ansi-terminal,
        ansi-terminal,
        path,
        path-io,
        random,
        serialise,
        stm,
        typed-process,
        safe-exceptions,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        tasty-golden,
        temporary,
        time,
        unix,
        vector,
        zlib

    if flag(cuda)
        cpp-options:     -DJITML_CUDA_BINDINGS=1
        extra-libraries:
            cudart
            cublas
            cudnn

        extra-lib-dirs:  /usr/local/cuda/lib64

executable jitml
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        jitml

executable jitml-demo
    main-is:          Demo.hs
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        jitml

test-suite jitml-unit
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/unit
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        aeson,
        bytestring,
        directory,
        filepath,
        jitml,
        optparse-applicative,
        path,
        path-io,
        tasty,
        tasty-hunit,
        temporary,
        text,
        unix,
        vector

test-suite jitml-integration
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/integration
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        aeson,
        base >=4.21 && <4.22,
        bytestring,
        directory,
        filepath,
        jitml,
        mtl,
        network,
        safe-exceptions,
        tasty,
        tasty-hunit,
        temporary,
        text,
        time

test-suite jitml-sl-canonicals
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/sl-canonicals
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        bytestring,
        jitml,
        mtl,
        tasty,
        tasty-hunit,
        temporary,
        text,
        vector,
        zlib

test-suite jitml-rl-canonicals
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/rl-canonicals
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        jitml,
        text,
        tasty,
        tasty-hunit,
        vector

test-suite jitml-hyperparameter
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/hyperparameter
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        jitml,
        tasty,
        tasty-hunit,
        text

test-suite jitml-cross-backend
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/cross-backend
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        directory,
        filepath,
        jitml,
        path,
        safe-exceptions,
        tasty,
        tasty-hunit,
        text,
        time,
        vector

test-suite jitml-daemon-lifecycle
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/daemon-lifecycle
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        bytestring,
        jitml,
        lens-family,
        mtl,
        network,
        proto-lens,
        proto-lens-runtime,
        tasty,
        tasty-hunit,
        text

test-suite jitml-e2e
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/e2e
    default-language: GHC2024
    ghc-options:      -Wall -Wcompat
    build-depends:
        base >=4.21 && <4.22,
        bytestring,
        directory,
        jitml,
        network,
        tasty,
        tasty-hunit,
        text
